ERR
import sys, os
py = sys.executable
print("Running training with:", py)
os.system(f'PYTHONPATH=$PWD "{py}" training.py '
          '--train-glob "data/frames/train/**/*.png" '
          '--val-glob "data/frames/val/**/*.png" '
          '--patch-size 256 --temporal-len 4 --batch-size 6 '
          '--epochs 30 --cuda --amp '
          '--pretrained "./checkpoints/cvpr2025_video.pth.tar" '
          '--lambda-rd 0.01 '
          '--save-dir "./checkpoints_finetune_lambda0.01" '
          '--log-dir "./logs/dcvc_finetune_lambda0.01" '
          '--workers 4')




Running training with: /home/work/dcvc/miniconda3/envs/dcvc_env/bin/python
  File "/home/work/dcvc/DCVC/training.py", line 149
    return {'x_hat': x_hat_seq, 'likelihoods': None, 'bpp_tensor': bpp_tensor}
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function
256
